--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
   crossorigin="anonymous"
 />
+  <script src="https://upload-widget.cloudinary.com/latest/global/all.js" type="text/javascript"></script>
   </head>
   <body>
     <div id="root"></div>
